Gotowy raport kata produkcyjna

--- a/ecoplastol/packages.config
+++ b/ecoplastol/packages.config
@@ -4,6 +4,8 @@
   <package id="EntityFramework6.Npgsql" version="6.3.0" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.5.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net461" />
+  <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net461" />
   <package id="Npgsql" version="4.1.1" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
