--- a/ecoplastol/App.config
+++ b/ecoplastol/App.config
@@ -46,6 +46,8 @@
   <system.data>
     <DbProviderFactories>
       <remove invariant="Npgsql" />
-      <add name="Npgsql Provider" invariant="Npgsql" description=".NET Framework Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Version=4.0.10.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
+      <!--<add name="Npgsql Provider" invariant="Npgsql" description=".NET Framework Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Version=4.0.10.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />-->
+      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7"/>
     </DbProviderFactories>
-  </system.data><connectionStrings><add name="ecoplastolEntities" connectionString="metadata=res://*/PGEntity.csdl|res://*/PGEntity.ssdl|res://*/PGEntity.msl;provider=Npgsql;provider connection string=&quot;Host=192.168.15.115;Database=ecoplastol;Username=postgres;Password=postgres;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  </system.data>
+  <connectionStrings><add name="ecoplastolEntities" connectionString="metadata=res://*/PGEntity.csdl|res://*/PGEntity.ssdl|res://*/PGEntity.msl;provider=Npgsql;provider connection string=&quot;Host=192.168.15.54;Database=ecoplastol;Username=postgres;Password=postgres;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
