--- a/ecoplastol/App.config
+++ b/ecoplastol/App.config
@@ -12,7 +12,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.3.0" newVersion="4.1.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -46,8 +46,11 @@
   <system.data>
     <DbProviderFactories>
       <remove invariant="Npgsql" />
-      <!--<add name="Npgsql Provider" invariant="Npgsql" description=".NET Framework Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Version=4.0.10.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />-->
-      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7"/>
+      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
     </DbProviderFactories>
   </system.data>
-  <connectionStrings><add name="ecoplastolEntities" connectionString="metadata=res://*/PGEntity.csdl|res://*/PGEntity.ssdl|res://*/PGEntity.msl;provider=Npgsql;provider connection string=&quot;Host=192.168.15.54;Database=ecoplastol;Username=postgres;Password=postgres;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <!--<add name="ecoplastolEntities" connectionString="metadata=res://*/PGEntity.csdl|res://*/PGEntity.ssdl|res://*/PGEntity.msl;provider=Npgsql;provider connection string=&quot;Host=91.227.156.78;Port=5555;Database=ecoplastol;Username=postgres;Password=postgres;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="ecoplastolEntities" connectionString="metadata=res://*/PGEntity.csdl|res://*/PGEntity.ssdl|res://*/PGEntity.msl;provider=Npgsql;provider connection string=&quot;Host=192.168.15.54;Port=5432;Database=ecoplastol;Username=postgres;Password=postgres;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
