--- a/ecoplastol/ecoplastol.csproj
+++ b/ecoplastol/ecoplastol.csproj
@@ -62,8 +62,8 @@
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ReportViewer.WinForms.10.0.40219.1\lib\Microsoft.ReportViewer.WinForms.dll</HintPath>
     </Reference>
-    <Reference Include="Npgsql, Version=4.1.1.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Npgsql.4.1.1\lib\net461\Npgsql.dll</HintPath>
+    <Reference Include="Npgsql, Version=4.1.3.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Npgsql.4.1.3\lib\net461\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -164,6 +164,14 @@
     <Compile Include="itf_trn.cs">
       <DependentUpon>PGEntity.tt</DependentUpon>
     </Compile>
+    <Compile Include="konfiguracja\produkcja\PanelProdBrygadzisci.xaml.cs">
+      <DependentUpon>PanelProdBrygadzisci.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="konfiguracja\produkcja\PanelProdBrygadzisci_db.cs" />
+    <Compile Include="konfiguracja\produkcja\PanelProdMaszyny_db.cs" />
+    <Compile Include="konfiguracja\produkcja\PanelProdOperatorzy_db.cs" />
+    <Compile Include="konfiguracja\produkcja\PanelProdWyrobyDruty_db.cs" />
+    <Compile Include="konfiguracja\produkcja\PanelProdWyrobyTypy_db.cs" />
     <Compile Include="konfiguracja\produkcja\PanelProdWyrobyWadyNN.xaml.cs">
       <DependentUpon>PanelProdWyrobyWadyNN.xaml</DependentUpon>
     </Compile>
@@ -173,12 +181,17 @@
     <Compile Include="konfiguracja\produkcja\PanelProdWyrobyTypy.xaml.cs">
       <DependentUpon>PanelProdWyrobyTypy.xaml</DependentUpon>
     </Compile>
-    <Compile Include="konfiguracja\produkcja\PanelProdWyrobZakresSDR.xaml.cs">
-      <DependentUpon>PanelProdWyrobZakresSDR.xaml</DependentUpon>
+    <Compile Include="konfiguracja\produkcja\PanelProdWyrobyWadyNN_db.cs" />
+    <Compile Include="konfiguracja\produkcja\PanelProdWyrobyZakresSDR_db.cs" />
+    <Compile Include="konfiguracja\produkcja\PanelProdWyroby_db.cs" />
+    <Compile Include="konfiguracja\produkcja\PanelProdWyrobyZakresSDR.xaml.cs">
+      <DependentUpon>PanelProdWyrobyZakresSDR.xaml</DependentUpon>
     </Compile>
     <Compile Include="konfiguracja\produkcja\PanelProdZaworyTypy.xaml.cs">
       <DependentUpon>PanelProdZaworyTypy.xaml</DependentUpon>
     </Compile>
+    <Compile Include="konfiguracja\produkcja\PanelProdZaworyTypy_db.cs" />
+    <Compile Include="konfiguracja\produkcja\PanelProdZmiany_db.cs" />
     <Compile Include="maszyny.cs">
       <DependentUpon>PGEntity.tt</DependentUpon>
     </Compile>
@@ -247,7 +260,6 @@
     <Compile Include="konfiguracja\produkcja\PanelProdWyroby.xaml.cs">
       <DependentUpon>PanelProdWyroby.xaml</DependentUpon>
     </Compile>
-    <Compile Include="konfiguracja\produkcja\konf_produkcja_db.cs" />
     <Compile Include="konfiguracja\traceability\PanelTraceKategorie.xaml.cs">
       <DependentUpon>PanelTraceKategorie.xaml</DependentUpon>
     </Compile>
@@ -369,6 +381,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="konfiguracja\produkcja\PanelProdBrygadzisci.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="konfiguracja\produkcja\PanelProdWyrobyWadyNN.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -381,7 +397,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="konfiguracja\produkcja\PanelProdWyrobZakresSDR.xaml">
+    <Page Include="konfiguracja\produkcja\PanelProdWyrobyZakresSDR.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
