Poprawione dodawanie wyrobów, poprawki w module obsłygi zleceń

--- a/ecoplastol/App.config
+++ b/ecoplastol/App.config
@@ -50,7 +50,13 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
+    <!--Malinowice - local-->
+    <add name="ecoplastolEntities" connectionString="metadata=res://*/PGEntity.csdl|res://*/PGEntity.ssdl|res://*/PGEntity.msl;provider=Npgsql;provider connection string=&quot;Host=192.168.20.206;Port=5432;Database=ecoplastol;Username=postgres;Password=postgres;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />
+    <!--Malinowice - remote-->
+    <!--<add name="ecoplastolEntities" connectionString="metadata=res://*/PGEntity.csdl|res://*/PGEntity.ssdl|res://*/PGEntity.msl;provider=Npgsql;provider connection string=&quot;Host=193.32.180.162;Port=5555;Database=ecoplastol;Username=postgres;Password=postgres;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />-->
+    <!--TQ Ząbkowice - local-->
+    <!--<add name="ecoplastolEntities" connectionString="metadata=res://*/PGEntity.csdl|res://*/PGEntity.ssdl|res://*/PGEntity.msl;provider=Npgsql;provider connection string=&quot;Host=192.168.15.54;Port=5432;Database=ecoplastol;Username=postgres;Password=postgres;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />-->
+    <!--TQ Ząbkowice - remote-->
     <!--<add name="ecoplastolEntities" connectionString="metadata=res://*/PGEntity.csdl|res://*/PGEntity.ssdl|res://*/PGEntity.msl;provider=Npgsql;provider connection string=&quot;Host=91.227.156.78;Port=5555;Database=ecoplastol;Username=postgres;Password=postgres;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="ecoplastolEntities" connectionString="metadata=res://*/PGEntity.csdl|res://*/PGEntity.ssdl|res://*/PGEntity.msl;provider=Npgsql;provider connection string=&quot;Host=192.168.15.54;Port=5432;Database=ecoplastol;Username=postgres;Password=postgres;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
